loom/bundle/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: loom-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: ui
      protocol: TCP
  selector:
    app: loom
